# smartDNS

./: .gitignore  .gitmodules  CMakeLists.txt  README  create_statistics_mod.py
check/: A_a.a.com.pcap  A_www.example.com.pcap  CMakeLists.txt  check_cfg.c  check_cfg_glb.c  check_dns.c  check_engine_dpdk.c  check_main.c  check_main.h  check_mem.c  check_option.c  check_parse_zone.c  check_pcap.c  check_pkt_dispose.c  check_util.c  check_util.h  check_zone.c  check_zone_cfg.c  check_zone_parse.c  check_zone_query.c  wrong_header.pcap
conf/: example.zone  keys.conf  master.conf  smartDNS.conf
src/: CMakeLists.txt  main.c
src/dns/: CMakeLists.txt  dns.c
src/engine/: CMakeLists.txt  engine.c  engine_dpdk.c  engine_dpdk.h
src/include/: cfg_glb.h  dns_glb.h  engine_glb.h  log_glb.h  mem_glb.h  monitor_glb.h  option_glb.h  pcap_glb.h  pkt_dispose_glb.h  signal_glb.h  sort_glb.h  util_glb.h  worker_glb.h  zone_glb.h
src/log/: CMakeLists.txt  log.c  log.h  statistics.c
src/master/: CMakeLists.txt  cfg.c  cfg.h  cfg_glb.c  option.c  option.h  signal_my.c  signal_my.h  util_glb.c  zone.c  zone.h
src/mem/: CMakeLists.txt  mem.c  mem.h
src/monitor/: CMakeLists.txt  monitor.c  monitor.h
src/pcap/: CMakeLists.txt  pcap_read.c  pcap_read.h
src/sort/: CMakeLists.txt  sort.c
src/worker/: CMakeLists.txt  dns.c  dns.h  pkt_dispose.c  pkt_dispose.h  worker.c  worker.h
src/zone/: CMakeLists.txt  zone.c  zone.h  zone_cfg.c  zone_cfg.h  zone_parse.c  zone_parse.h  zone_query.c  zone_query.h
